added concept vid

--- a/index.html
+++ b/index.html
@@ -309,10 +309,13 @@
                         <br> -->
                         <div class="columns is-centered has-text-centered">
                         <video poster="" id="" autoplay controls muted width="90%" playbackRate=2.0 style="border-radius: 5px;">
-                            <source src="videos/overview.mp4" type="video/mp4">
+                            <source src="videos/concept.mp4" type="video/mp4">
                         </video>
                         </div>
-                        <span style="font-size: 125%"><b>Overview.</b> TODO.</span>
+                        <span style="font-size: 125%"><b>Overview.</b> DrEureka takes the task and safety instruction, along with environment source code, and runs Eureka to generate a regularized
+                            reward function and policy. Then, it tests the policy under different simulation conditions to build a reward-aware physics prior, which is
+                            provided to the LLM to generate a set of domain randomization (DR) parameters. Finally, using the synthesized reward and DR parameters,
+                            it trains policies for real-world deployment.</span>
                     </div>
                 </div>
             </div>
