adding 3 task videos and update teaser vid

--- a/index.html
+++ b/index.html
@@ -271,11 +271,20 @@
             <br>
             <div class="columns" style="align-items: end;">
                 <div class="column is-half">
-                                       <div class="col-md-4 col-sm-4 col-xs-4">
+                    <div class="col-md-4 col-sm-4 col-xs-4">
                         <img src="videos/tasks/walking_globe.png" width="18%" style="border-radius: 5px;" alt='<b>Walking Globe</b>, best DrEureka reward and DR parameters:
                         [sep]
                         assets/reward_functions/walking_globe.txt [sep] assets/domain_randomizations/walking_globe.txt' onclick="populateDemo(this, 1);">
-
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xs-4">
+                        <img src="videos/tasks/cube_rotation.png" width="18%" style="border-radius: 5px;" alt='<b>Cube Rotation</b>, best DrEureka reward and DR parameters:
+                        [sep]
+                        assets/reward_functions/cube_rotation.txt [sep] assets/domain_randomizations/cube_rotation.txt' onclick="populateDemo(this, 1);">  
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xs-4">
+                        <img src="videos/tasks/forward_locomotion.png" width="18%" style="border-radius: 5px;" alt='<b>Forward Locomotion</b>, best DrEureka reward and DR parameters:
+                        [sep]
+                        assets/reward_functions/forward_locomotion.txt [sep] assets/domain_randomizations/forward_locomotion.txt' onclick="populateDemo(this, 1);">  
                     </div>
                 </div>
                 <div class="row border rounded" style="padding-top:12px; padding-bottom:12px;">
