--- a/index.html
+++ b/index.html
@@ -307,12 +307,15 @@
             <div class="col-md-6">
                 <div id="imgtext-1" style="font-size: 1.5em">Select an image above:</div>
                 <div>
-                    <pre
-                        class="p-1"><code class="language-python" id="answer-1">DrEureka responses shown within code block.</code></pre>
+                    <pre class="p-1"><code class="language-python" id="answer-1">DrEureka responses shown within code block.</code></pre>
+                    <pre class="p-1"><code class="language-python" id="answer-2"></code></pre>
                 </div>
             </div>
         </div>
+        
     </section>
+
+
 
     <section class="section">
         <div class="container is-max-widescreen">
@@ -392,9 +395,36 @@
 
 <script>
 
-    timeoutIds = [];
+    // timeoutIds = [];
+    var timeoutIds = [];
+
+    function clearExistingTypeWriters() {
+        timeoutIds.forEach(timeoutId => clearTimeout(timeoutId));
+        timeoutIds = [];
+    }
+
+    function typeWriter(txt, i, elementId) {
+        var element = document.getElementById(elementId);
+        if (i < txt.length) {
+            if (txt.charAt(i) == '\\') {
+                element.innerHTML += "<br>";
+            } else {
+                element.innerHTML += txt.charAt(i);
+            }
+            var timeoutId = setTimeout(() => typeWriter(txt, i + 1, elementId), 1);
+            timeoutIds.push(timeoutId);
+        }  else {
+        // Apply syntax highlighting once the full text has been written
+        hljs.highlightElement(element);
+        }
+    }
 
     function populateDemo(imgs, num) {
+        clearExistingTypeWriters();  // Clear any ongoing typewriter effects
+
+        // Clear previous text content
+        document.getElementById("answer-1").innerHTML = "";
+        document.getElementById("answer-2").innerHTML = "";
         // Get the expanded image
         var expandImg = document.getElementById("expandedImg-" + num);
         var expandImgSim = document.getElementById("expandedImg-" + (num+1));
@@ -432,72 +462,63 @@
         }
 
         // NOTE (wliang): Modified from original to read from file instead
-        console.log("Fetching text from:", qa[1]);
+        console.log("Fetching text from qa:", qa);
+        console.log("Fetching text from 1:", qa[1]);
+        console.log("Fetching text from 2:", qa[2]);
+
         fetch(qa[1])
             .then(response => response.text())
             .then(contents => {
                 // Call the processData function and pass the contents as an argument
-                typeWriter(contents, 0, qa[0], num);
+                // typeWriter(contents, 0, qa[0], num);
+                typeWriter(contents, 0, "answer-1");
+
             })
             .catch(error => console.error('Error reading file:', error));
+
+        fetch(qa[2])
+            .then(response => response.text())
+            .then(contents => {
+                // typeWriter(contents,  0, qa[0], num);
+                typeWriter(contents, 0, "answer-2");
+
+            })
+            .catch(error => console.error('Error fetching the second text file:', error));
     }
 
-    // function populateDemo(imgs, num) {
-    //     // Get the expanded image
-    //     var expandImg = document.getElementById("expandedImg-" + num);
-    //     // Get the image text
+    // function typeWriter(txt, i, q, num) {
     //     var imgText = document.getElementById("imgtext-" + num);
     //     var answer = document.getElementById("answer-" + num);
-
-    //     // Use the same src in the expanded image as the image being clicked on from the grid
-    //     expandImg.src = imgs.src.replace(".png", ".mp4");
-    //     var video = document.getElementById('demo-video-' + num);
-    //     // or video = $('.video-selector')[0];
-    //     video.pause()
-    //     video.load();
-    //     video.play();
-    //     video.removeAttribute('controls');
-
-    //     console.log(expandImg.src);
-    //     // Use the value of the alt attribute of the clickable image as text inside the expanded image
-    //     var qa = imgs.alt.split("[sep]");
-    //     imgText.innerHTML = qa[0];
-    //     answer.innerHTML = "";
-    //     // Show the container element (hidden with CSS)
-    //     expandImg.parentElement.style.display = "block";
-    //     for (timeoutId of timeoutIds) {
-    //         clearTimeout(timeoutId);
+    //     if (imgText.innerHTML == q) {
+    //         for (let k = 0; k < 5; k++) {
+    //             if (i < txt.length) {
+    //                 if (txt.charAt(i) == "\\") {
+    //                     answer.innerHTML += "\n";
+    //                     i += 1;
+    //                 } else {
+    //                     answer.innerHTML += txt.charAt(i);
+    //                 }
+    //                 i++;
+    //             }
+    //         }
+    //         hljs.highlightAll();
+    //         timeoutIds.push(setTimeout(typeWriter, 1, txt, i, q, num));
     //     }
-
-    //     // NOTE (wliang): Modified from original to read from file instead
-    //     fetch(qa[1])
-    //         .then(response => response.text())
-    //         .then(contents => {
-    //             // Call the processData function and pass the contents as an argument
-    //             typeWriter(contents, 0, qa[0], num);
-    //         })
-    //         .catch(error => console.error('Error reading file:', error));
     // }
 
-    function typeWriter(txt, i, q, num) {
-        var imgText = document.getElementById("imgtext-" + num);
-        var answer = document.getElementById("answer-" + num);
-        if (imgText.innerHTML == q) {
-            for (let k = 0; k < 5; k++) {
-                if (i < txt.length) {
-                    if (txt.charAt(i) == "\\") {
-                        answer.innerHTML += "\n";
-                        i += 1;
-                    } else {
-                        answer.innerHTML += txt.charAt(i);
-                    }
-                    i++;
-                }
-            }
-            hljs.highlightAll();
-            timeoutIds.push(setTimeout(typeWriter, 1, txt, i, q, num));
-        }
-    }
+    // function typeWriter(txt, i, elementId) {
+    //     var element = document.getElementById(elementId);
+    //     if (i < txt.length) {
+    //         if (txt.charAt(i) == '\\') {
+    //             element.innerHTML += "<br>"; // Use <br> for HTML line breaks
+    //         } else {
+    //             element.innerHTML += txt.charAt(i);
+    //         }
+    //         setTimeout(() => typeWriter(txt, i + 1, elementId), 1); // Adjust typewriter speed here
+    //     }
+    // }
+
+    
 
 </script>
 
