youtube link test

--- a/index.html
+++ b/index.html
@@ -144,8 +144,20 @@
                 <video poster="" id="" autoplay controls muted loop width="100%" playbackRate=2.0 style="border-radius: 5px;">
                     <source src="videos/dreureka_teaser.mp4" type="video/mp4">
                     <!-- <source src="videos/dreureka_teaser_compressed.mp4" type="video/mp4"> -->
-
                 </video>
+                <br>
+                <br>
+                <br>
+                <div class="columns is-centered has-text-centered">
+                    <h2 class="title is-3">DrEureka 5-Minute Uncut Deployment Video</h2>
+                </div>
+                <br>
+                <br>
+                <div class="columns is-centered has-text-centered">
+
+                <iframe width="560" height="315" src="https://youtu.be/kRj3crlFdOU" frameborder="0" allowfullscreen></iframe>
+            </div>
+
             </div>
         </div>
     </section>
