--- a/index.html
+++ b/index.html
@@ -342,14 +342,17 @@
                     </div>
                 </div> 
                 <div class="column is-two-fifths" style="padding-top:12px; padding-bottom:12px;">
+                    <h1 style = "font-size:3em; text-align: center;">Simulation</h1>
                     <div class="row border rounded" style = "display:flex; height: 20em;  overflow: hidden;">
                         <video id="demo-video-1" style="border-radius: 5px;  object-fit: cover;" autoplay loop muted webkit-playsinline
                             playsinline onclick="setAttribute('controls', 'true');">
                             <source id="expandedImg-1"  type="video/mp4">
                         </video>
+                        
                     </div>
                 </div>
                 <div class="column is-two-fifths" style="padding-top:12px; padding-bottom:12px;">
+                    <h1 style = "font-size:3em;  text-align: center;">Real</h1>
                     <div class="row border rounded" style = "display:flex; height: 20em ; overflow: hidden;">
                         <video id="demo-video-2" style="border-radius: 5px; object-fit: cover;" autoplay loop muted webkit-playsinline
                             playsinline onclick="setAttribute('controls', 'true');">
@@ -473,8 +476,8 @@
         document.getElementById("answer-1").innerHTML = "";
         document.getElementById("answer-2").innerHTML = "";
         // Get the expanded image
-        var expandImg = document.getElementById("expandedImg-" + num);
-        var expandImgSim = document.getElementById("expandedImg-" + (num+1));
+        var expandImg = document.getElementById("expandedImg-" + (num+1));
+        var expandImgSim = document.getElementById("expandedImg-" + (num));
         // Get the image text
         var imgText = document.getElementById("imgtext-" + num);
         var answer = document.getElementById("answer-" + num);
