--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
                 <br>
                 <div class="columns is-centered has-text-centered">
 
-                <iframe width="560" height="315" src="https://youtu.be/kRj3crlFdOU" frameborder="0" allowfullscreen></iframe>
+                <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/kRj3crlFdOU" frameborder="0" allowfullscreen></iframe> -->
+                <iframe width="950" height="560" src="https://www.youtube.com/embed/kRj3crlFdOU" frameborder="0" allowfullscreen></iframe>
+
             </div>
 
             </div>
