added failures and deflating

--- a/index.html
+++ b/index.html
@@ -306,6 +306,16 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                <div class="columns is-centered has-text-centered">
+                    <h2 class="title is-3">DrEureka Balancing on a Deflating Ball</h2>
+                </div>
+                <br>
+                <div class="columns is-centered has-text-centered">
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/eECuJUuSt5c" frameborder="0" allowfullscreen></iframe>
+
+            </div>
             </div>
         </div>
     </section>
@@ -463,8 +473,49 @@
     </div>
 
         </section>
-
-
+        <div class="container is-max-widescreen">
+            <div class="rows">
+                <div class="rows is-centered ">
+                    <div class="row is-full-width">
+                        <h2 class="title is-3"><span class="dvima">Failure Videos and Limitations</span></h2>
+                        <p style="font-size: 125%">
+                        Finally, we show several occasions when the robot falls from the ball. There are many avenues to further improve DrEureka. For example,
+                        DrEureka policies are currently entirely trained in simulation, but using real-world execution failure as feedback may serve as an effective 
+                        way for LLMs to determine how to best tune sim-to-real in successive iterations. Furthermore, all tasks and policies in our work operately purely from 
+                        robot's proprioceptive inputs, and incorporating vision or other sensors may further improve policy performance and LLM feedback loop.
+                        </p>  
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container is-max-widescreen">
+            <div class="hero-body">
+                <div class="container">
+                    <div id="results-carousel" class="carousel results-carousel">
+                        <div class="item">
+                            <video poster="videos/failures/C0005_clip.png" preload="none" id=""  controls muted loop height="100%" playbackRate=2.0>
+                                <source src="videos/failures/C0005_clip_compressed.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="item">
+                            <video poster="videos/failures/C0019_clip.png" preload="none" id=""  autoplay controls muted loop height="100%" playbackRate=2.0>
+                                <source src="videos/failures/C0019_clip_compressed.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="item">
+                            <video poster="videos/failures/IMG_1575_clip.png" id="" controls muted loop height="100%" playbackRate=2.0>
+                                <source src="videos/failures/IMG_1575_clip_compressed.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="item">
+                            <video poster="videos/failures/C0013_clip.png" preload="none" id=""  controls muted loop height="100%" playbackRate=2.0>
+                                <source src="videos/failures/C0013_clip_compressed.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
    
 
 <section class="section" id="BibTeX">
