--- a/index.html
+++ b/index.html
@@ -145,20 +145,19 @@
                     <source src="videos/dreureka_teaser.mp4" type="video/mp4">
                     <!-- <source src="videos/dreureka_teaser_compressed.mp4" type="video/mp4"> -->
                 </video>
+                <!-- <br>
                 <br>
-                <br>
-                <br>
-                <div class="columns is-centered has-text-centered">
+                <br> -->
+                <!-- <div class="columns is-centered has-text-centered">
                     <h2 class="title is-3">DrEureka 5-Minute Uncut Deployment Video</h2>
                 </div>
                 <br>
                 <br>
                 <div class="columns is-centered has-text-centered">
 
-                <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/kRj3crlFdOU" frameborder="0" allowfullscreen></iframe> -->
                 <iframe width="950" height="560" src="https://www.youtube.com/embed/kRj3crlFdOU" frameborder="0" allowfullscreen></iframe>
 
-            </div>
+            </div> -->
 
             </div>
         </div>
@@ -214,16 +213,29 @@
                         <h2 class="title is-2"><span class="dvima">Experiment Highlights</span></h2>
                         <p style="font-size: 125%">
                             In this section, we present the key qualitative results from our experiments, highlighting the robustness of DrEureka policies in the real-world yoga ball walking task as well as the 
-                            best DrEureka outputs for all our benchmark tasks. Detailed quantitative experiments and comparisons can be found in the paper.
+                            best DrEureka outputs for all our benchmark tasks. Detailed quantitative experiments and comparisons can be found in the paper. All videos are played at 1x speed.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    <!-- </section>
 
-    <section class="section">
+    <section class="section"> -->
+        <br>
+        <br>
         <div class="container is-max-widescreen">
+            <div class="columns is-centered has-text-centered">
+                <h2 class="title is-3">DrEureka 5-Minute Uncut Deployment Video</h2>
+            </div>
+            <br>
+            <div class="columns is-centered has-text-centered">
+
+            <iframe width="950" height="560" src="https://www.youtube.com/embed/kRj3crlFdOU" frameborder="0" allowfullscreen></iframe>
+
+        </div>
+        <br>
+        <br>
             <div class="rows">
                 <div class="rows is-centered ">
                     <div class="row is-full-width">
@@ -306,6 +318,7 @@
                         </div>
                     </div>
                 </div>
+                <br>
                 <br>
                 <div class="columns is-centered has-text-centered">
                     <h2 class="title is-3">DrEureka Balancing on a Deflating Ball</h2>
